# barrenanalysis

./: BarrenAnalysis.cc  BarrenAnalysis_googletests.cc  BarrenAnalysis_tests.cc  BarrenLand.h  CMakeLists.txt  Dockerfile  README.md  Testing Documentation.docx  barren  test
include/: BarrenLand.h
src/: BarrenAnalysis.cc
tests/: BarrenAnalysis_tests.cc
