cmake_minimum_required(VERSION 3.10)
project(barrenanalysis)
set(CMAKE_CXX_STANDARD 17)
set (DIRECTORY /Users/bobbyclasemann/Desktop/TARGET/barrenanalysis)
include_directories("${DIRECTORY}/include")
set(SOURCES BarrenAnalysis.cc ${DIRECTORY}/src BarrenLand.h)
add_executable(barrenanalysis BarrenAnalysis.cc)